# sqlx-example

./: .env  Cargo.toml  README.md
migrations/: 20241116140325_initial.sql  20241117073551_add_account.sql  20241117084937_change_account_account_id_user_id.sql  20241117091108_change_account_created_at_type.sql
src/: account.rs  errors.rs  lib.rs  main.rs  models.rs  todolist.rs  user.rs
